21 August 2007: Wouter
	- ANY response validation.
	- store security status in cache.
	- check cache security status and either send the query to be
	  validated, return the query to client, or send servfail to client.
	  Sets AD bit on validated replies.
	- do not examine security status on an error reply in mesh_done.

20 August 2007: Wouter
	- validate and positive validation, positive wildcard NSEC validation.
	- nodata validation, nxdomain validation.

18 August 2007: Wouter
	- process DNSKEY response in FINDKEY state.

17 August 2007: Wouter
	- work on DS2KE routine.
	- val_nsec.c for validator NSEC proofs.
	- unit test for NSEC bitmap reading.
	- dname iswild and canonical_compare with unit tests.

16 August 2007: Wouter
	- DS sig unit test.
	- latest release libevent 1.3c and 1.3d have threading fixed.
	- key entry fixup data pointer and ttl absolute.
	- This makes a key-prime succeed in validator, with DS or DNSKEY as
	  trust-anchor.
	- fixup canonical compare byfield routine, fix bug and also neater.
	- fixed iterator response type classification for queries of type
	  ANY and NS.
	  dig ANY gives sometimes NS rrset in AN and NS section, and parser
	  removes the NS section duplicate. dig NS gives sometimes the NS
	  in the answer section, as referral.
	- validator FINDKEY state.

15 August 2007: Wouter
	- crypto calls to verify signatures.
	- unit test for rrsig verification.

14 August 2007: Wouter
	- default outgoing ports changed to avoid port 2049 by default.
	  This port is widely blocked by firewalls.
	- count infra lameness cache in memory size.
	- accounting of memory improved
	- outbound entries are allocated in the query region they are for.
	- extensive debugging for memory allocations.
	- --enable-lock-checks can be used to enable lock checking.
	- protect undefs in config.h from autoheaders ministrations.
	- print all received udp packets. log hex will print on multiple
	  lines if needed.